--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        
+        <div class="calculator">
+            <div class="display">hmm</div>
+            <div class="numpad">
+                <div class="numeric">    
+                    <button class="button">7</button>
+                    <button class="button">8</button>
+                    <button class="button">9</button>
+                    <button class="button">4</button>
+                    <button class="button">5</button>
+                    <button class="button">6</button>
+                    <button class="button">1</button>
+                    <button class="button">2</button>
+                    <button class="button">3</button>
+                    <button class="button">AC</button>
+                    <button class="button">0</button>
+                    <button class="button">=</button>
+                </div>
+                <div class="functions">
+                    <button class="button">/</button>
+                    <button class="button">*</button>
+                    <button class="button">-</button>
+                    <button class="button">+</button>
+                </div>    
+            </div>
+        </div>
     </body>
 </html>
