styled calculator with css and js

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     </head>
     <body>
         <div class="calculator">
-            <div class="display">hmm</div>
+            <div class="display"></div>
             <div class="numpad">
                 <div class="numeric">    
-                    <button class="button">7</button>
-                    <button class="button">8</button>
-                    <button class="button">9</button>
-                    <button class="button">4</button>
-                    <button class="button">5</button>
-                    <button class="button">6</button>
-                    <button class="button">1</button>
-                    <button class="button">2</button>
-                    <button class="button">3</button>
-                    <button class="button">AC</button>
-                    <button class="button">0</button>
-                    <button class="button">=</button>
+                    <button class="buttonN">7</button>
+                    <button class="buttonN">8</button>
+                    <button class="buttonN">9</button>
+                    <button class="buttonN">4</button>
+                    <button class="buttonN">5</button>
+                    <button class="buttonN">6</button>
+                    <button class="buttonN">1</button>
+                    <button class="buttonN">2</button>
+                    <button class="buttonN">3</button>
+                    <button class="buttonF">AC</button>
+                    <button class="buttonN">0</button>
+                    <button class="buttonF">=</button>
                 </div>
                 <div class="functions">
-                    <button class="button">/</button>
-                    <button class="button">*</button>
-                    <button class="button">-</button>
-                    <button class="button">+</button>
+                    <button class="buttonF">÷</button>
+                    <button class="buttonF">x</button>
+                    <button class="buttonF">-</button>
+                    <button class="buttonF">+</button>
                 </div>    
             </div>
         </div>
